--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .header{
     background-color: #1f2937;
-    padding: 0px 150px 150px 150px;
+    padding: 0px 150px 120px 150px;
 }
 
 .nav{
@@ -42,10 +42,16 @@ a{
     color: #f9faf8;
 }
 
-.placeholder1{
+.header-content-right{
+    text-align: center;
+    color: #F9FAF8;
     width: 500px;
-    height: auto;
-    align-self: stretch;
+    height: 200px;
+    background-color: gray;
+}
+
+.header-content-right > p{
+    margin: 90px 0 0 0;
 }
 
 .header-button{
@@ -55,3 +61,33 @@ a{
     border-radius: 20px;
 }
 
+h2{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    margin: 40px 0 40px 0;
+}
+
+.boxes{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.box1, .box2, .box3, .box4{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 200px;
+    gap: 10px;
+}
+
+.box1-img, .box2-img, .box3-img, .box4-img{
+    border: 3px solid #3882F6;
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+    flex-shrink: 0;
+}
